--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "@react-native-community/masked-view": "^0.1.5",
     "react": "16.9.0",
     "react-native": "0.61.2",
-    "react-native-ble-manager": "https://github.com/zhanguangao/react-native-ble-manager.git",
+    "react-native-ble-manager": "^7.4.1",
     "react-native-gesture-handler": "^1.5.3",
     "react-native-reanimated": "^1.4.0",
     "react-native-safe-area-context": "^0.6.2",
-    "react-native-screens": "^2.0.0-alpha.22",
+    "react-native-screens": "2.0.0-beta.4",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^2.0.12"
   },
@@ -31,7 +31,7 @@
     "babel-jest": "^24.9.0",
     "eslint": "^6.5.1",
     "jest": "^24.9.0",
-    "jetifier": "^1.6.4",
+    "jetifier": "^1.6.6",
     "metro-react-native-babel-preset": "^0.56.0",
     "react-test-renderer": "16.9.0"
   },
