--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -18,7 +18,7 @@
 # org.gradle.parallel=true
 
 android.useAndroidX=true
-android.enableJetifier=false
+android.enableJetifier=true
 
 MYAPP_RELEASE_STORE_FILE=key.jks
 MYAPP_RELEASE_KEY_ALIAS=key
