--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,9 +6,16 @@ buildscript {
         minSdkVersion = 19
         compileSdkVersion = 28
         targetSdkVersion = 28
+        supportLibVersion = "28.0.0"
     }
     repositories {
+        maven{url 'http://maven.aliyun.com/nexus/content/groups/public/'}
+        maven { url "https://dl.bintray.com/android/android-tools" }
+        // maven {
+        //     url 'https://maven.fabric.io/public'
+        // }
         google()
+        mavenCentral()
         jcenter()
     }
     dependencies {
